kubernetes/audit-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audit-service
  namespace: retail-promotion-platform
  labels:
    app: audit-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: audit-service
  template:
    metadata:
      labels:
        app: audit-service
    spec:
      containers:
        - name: audit-service
          image: retailplatformacr.azurecr.io/audit-service:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 8089
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "250m"
              memory: "512Mi"
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8089
            initialDelaySeconds: 120
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8089
            initialDelaySeconds: 180
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 6
---
apiVersion: v1
kind: Service
metadata:
  name: audit-service
  namespace: retail-promotion-platform
spec:
  selector:
    app: audit-service
  ports:
    - port: 8089
      targetPort: 8089
  type: ClusterIP
