kubernetes/pricing-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pricing-service
  namespace: retail-promotion-platform
  labels:
    app: pricing-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pricing-service
  template:
    metadata:
      labels:
        app: pricing-service
    spec:
      containers:
        - name: pricing-service
          image: docker-pricing-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8086
          resources:
            requests:
              cpu: "250m"
              memory: "384Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8086
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8086
            initialDelaySeconds: 45
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: pricing-service
  namespace: retail-promotion-platform
spec:
  selector:
    app: pricing-service
  ports:
    - port: 8086
      targetPort: 8086
  type: ClusterIP
