kubernetes/promotion-command-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: promotion-command-service
  namespace: retail-promotion-platform
  labels:
    app: promotion-command-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: promotion-command-service
  template:
    metadata:
      labels:
        app: promotion-command-service
    spec:
      containers:
        - name: promotion-command-service
          image: retailplatformacr.azurecr.io/promotion-command-service:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 8082
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "250m"
              memory: "512Mi"
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8082
            initialDelaySeconds: 120
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8082
            initialDelaySeconds: 180
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 6
---
apiVersion: v1
kind: Service
metadata:
  name: promotion-command-service
  namespace: retail-promotion-platform
spec:
  selector:
    app: promotion-command-service
  ports:
    - port: 8082
      targetPort: 8082
  type: ClusterIP
